# paint-match

./: CMakeLists.txt  LICENCE  README.md  config.h.in
src/: CMakeLists.txt  ImageMatcher.cpp  ImageMatcher.h  ImageMatcherTest.cc  ImageReader.cpp  ImageReader.h  main.cpp
